<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioGroup5"
        android:layout_width="224dp"
        android:layout_height="192dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/resul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nu3">

        <RadioButton
            android:id="@+id/sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sum" />

        <RadioButton
            android:id="@+id/res"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/res" />

        <RadioButton
            android:id="@+id/div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/div" />

        <RadioButton
            android:id="@+id/mult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Multi" />
    </RadioGroup>

    <TextView
        android:id="@+id/resul"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="27dp"
        android:text="@string/resu"
        app:layout_constraintBottom_toTopOf="@+id/his"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup5" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="41dp"
        android:text="@string/ope"
        app:layout_constraintBottom_toTopOf="@+id/his"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/resul"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup5" />

    <EditText
        android:id="@+id/nu1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="154dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/nu2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="154dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/nu3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nu1" />

    <EditText
        android:id="@+id/nu3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nu2" />

    <TextView
        android:id="@+id/his"
        android:layout_width="314dp"
        android:layout_height="198dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="60dp"
        android:text="@string/hi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resul" />
</androidx.constraintlayout.widget.ConstraintLayout>