<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pantalla3">

    <Button
        android:id="@+id/regre3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="305dp"
        android:layout_marginTop="670dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="Regresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nomat"
        android:layout_width="370dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/NombreMa"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/maes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/maes"
        android:layout_width="370dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/Maestro"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/aula"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomat" />

    <EditText
        android:id="@+id/aula"
        android:layout_width="370dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/aula"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/altamat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maes" />

    <Button
        android:id="@+id/altamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="10dp"
        android:text="ALTA"
        app:layout_constraintBottom_toTopOf="@+id/consumat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aula" />

    <Button
        android:id="@+id/consumat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="20dp"
        android:text="CONSULTAR NOMBRE MATERIA"
        app:layout_constraintBottom_toTopOf="@+id/consumae"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/altamat" />

    <Button
        android:id="@+id/consumae"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="20dp"
        android:text="CONSULTAR MAESTRO"
        app:layout_constraintBottom_toTopOf="@+id/bajama"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/consumat" />

    <Button
        android:id="@+id/bajama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="15dp"
        android:text="BAJA"
        app:layout_constraintBottom_toTopOf="@+id/modima"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/consumae" />

    <Button
        android:id="@+id/modima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="100dp"
        android:text="MODIFICAR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bajama" />
</androidx.constraintlayout.widget.ConstraintLayout>